# LLM4Chem-Explainable-synthesis

./: README.md  environment.yml  pyproject.toml  requirements.txt
UI/: causal_engine0828 copy.py  material_design_app.py  material_design_app0828.py  material_design_app0830.py  material_design_app0907.py  material_run_app.sh
UI/outputs/: combined_doping_data.json  test_doping_data.json
config/: enriched_eval_engine_query.yaml  eval_engine_filtered.yaml  filtered_eval_engine_query.yaml
outputs/: combined_doping_data.json  enriched_knowledge_graph.json  enriched_test_knowledge_graph.json  filtered_combined_doping_data.json  filtered_test_doping_data.json  test_doping_data.json
script/: 1-fetch_papers_multi.py  2-pdf_to_txt.py  3-clean_txt.py  4-extract_info.py  build_graph.py  evaluation.py  evaluation_llm.py  evaluation_multi.py  evaluation_plot.py  evaluation_plot_llm.py  material_design_app.py  material_run_app.sh  prompt.txt
script/archive/: causal_engine.py
tests/: README_tests.md  metrics.py  output_message_CASE002.txt  requirements.txt  results.csv  run_eval.py
tests/0916-online/: causal_engine copy.py  causal_engine_stable.py  enrich_graph.py  evaluation_multi.py  qwen_vs_dag_comparison_summary_results.csv  qwen_vs_dag_comparison_summary_statistics.json  sbatch_enrich.slurm  sbatch_evaluation.slurm  sbatch_test.slurm  slurm.11982664  slurm.11983098
tests/cases/: CASE002_wse2_fs_laser_oxygen.yaml
tests/gold/: CASE001_edges.json  CASE001_paths.json  CASE001_recipe.json  CASE002_edges.json  CASE002_paths.json  CASE002_recipe.json
(+25 files in other folders)
